--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 minecraft {
-    mappings channel: 'snapshot', version: '20201028-1.16.3'
+    mappings channel: 'official', version: '1.16.5'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
@@ -63,6 +63,7 @@ minecraft {
 dependencies {
     minecraft "net.minecraftforge:forge:${forge}"
     implementation fg.deobf("curse.maven:${mekanism}")
+    implementation fg.deobf("curse.maven:${jei}")
 }
 jar {
     manifest {
