--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-forge=1.16.4-35.1.13
-verx=1.1.20
+forge=1.16.5-36.1.0
+verx=1.3.2
 mekanism=mekanism:3134211
+jei=jei:3062908
