--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forge=1.16.5-36.1.0
-verx=1.3.2
+verx=1.3.3-pre-1.17
 mekanism=mekanism:3134211
 jei=jei:3062908
