--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forge=1.17.1-37.0.33
-verx=1.4.1-pre1
+verx=1.4.3-alpha-6
 mekanism=mekanism:3134211
 jei=jei:3062908
