adds missing mineable tag

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forge=1.18.2-40.1.0
-verx=1.9.9
+verx=1.9.9c
 mekanism=mekanism-268560:3743835
 jei=jei-238222:3749770
