--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 forge=1.19.2-43.0.7
-verx=2.0.0a
+verx=2.0.0d
 mekanism=mekanism-268560:3922056
 jei=jei-238222:3905244
