--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-forge=1.19.2-43.1.1
-verx=2.0.0e
+forge=1.19.2-43.1.3
+verx=2.0.0
 mekanism=mekanism-268560:3922056
 jei=jei-238222:3905244
