--- a/src/main/resources/data/alltheores/worldgen/configured_feature/ore_sapphire.json
+++ b/src/main/resources/data/alltheores/worldgen/configured_feature/ore_sapphire.json
@@ -19,7 +19,7 @@
           "tag": "minecraft:deepslate_ore_replaceables"
         },
         "state": {
-          "Name": "alltheores:sapphire_slate_ore"
+          "Name": "alltheores:deepslate_sapphire_ore"
         }
       }
     ]
